--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
@@ -8037,14 +8037,14 @@ Objective value for Fourth Solution Set: 1.0000000000000002
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>Consider an Investment Universe made of 3 stocks $S_1, S_2,$ &amp; $S_3$ with the following characteristics:</p>
 <ul>
-<li><p>Covariance Matrix: $\bm{\Sigma} = 
+<li><p>Covariance Matrix: $\bf{\Sigma} = 
 \begin{pmatrix}
 0.010 &amp; 0.002 &amp; 0.001 \\
 0.002 &amp; 0.011 &amp; 0.003 \\
 0.001 &amp; 0.003 &amp; 0.020 \\
 \end{pmatrix};$</p>
 </li>
-<li><p>Expected Return Vector: $\bm{\mu} = \begin{pmatrix}
+<li><p>Expected Return Vector: $\boldsymbol{\mu} = \begin{pmatrix}
 \mu_1 \\
 \mu_2 \\ 
 \mu_3 \\
