--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
@@ -8065,7 +8065,7 @@ Objective value for Fourth Solution Set: 1.0000000000000002
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="3.1-Find-the-Global-Minimal-Variance-Portfolio.-(5-pts)">3.1 Find the Global Minimal Variance Portfolio. (5 pts)<a class="anchor-link" href="#3.1-Find-the-Global-Minimal-Variance-Portfolio.-(5-pts)">¶</a></h4>
+<h4 id="3.1-Global-Minimal-Variance-Portfolio-(5-pts)">3.1 Global Minimal Variance Portfolio (5 pts)<a class="anchor-link" href="#3.1-Global-Minimal-Variance-Portfolio-(5-pts)">¶</a></h4>
 </div>
 </div>
 </div>
@@ -8140,6 +8140,111 @@ Objective value for Fourth Solution Set: 1.0000000000000002
 <pre>Optimal weights for the Global Minimum Variance Portfolio:
 [0.43878636 0.37007632 0.19113732]
 Minimum Variance of the Portfolio: 0.005404212545913877
+</pre>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h4 id="3.2-MVP-w/Expected-Return-(5-pts)">3.2 MVP w/Expected Return (5 pts)<a class="anchor-link" href="#3.2-MVP-w/Expected-Return-(5-pts)">¶</a></h4>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>Find the <strong>Minimum Variance Portfolio</strong> $(P_1)$ with Expected Return equal to $\mu_1$. Find the <strong>Minimum Variance Portfolio</strong> $(P_2)$ with Expected Return equal to $\frac{\mu_2 + \mu_3}{2}$.</p>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">from</span> <span class="nn">scipy.optimize</span> <span class="kn">import</span> <span class="n">minimize</span>
+
+<span class="c1"># Define the covariance matrix</span>
+<span class="n">Sigma</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">([</span>
+    <span class="p">[</span><span class="mf">0.010</span><span class="p">,</span> <span class="mf">0.002</span><span class="p">,</span> <span class="mf">0.001</span><span class="p">],</span>
+    <span class="p">[</span><span class="mf">0.002</span><span class="p">,</span> <span class="mf">0.011</span><span class="p">,</span> <span class="mf">0.003</span><span class="p">],</span>
+    <span class="p">[</span><span class="mf">0.001</span><span class="p">,</span> <span class="mf">0.003</span><span class="p">,</span> <span class="mf">0.020</span><span class="p">]</span>
+<span class="p">])</span>
+
+<span class="c1"># Define the expected returns vector</span>
+<span class="n">mu</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">([</span><span class="mf">0.0427</span><span class="p">,</span> <span class="mf">0.0015</span><span class="p">,</span> <span class="mf">0.0285</span><span class="p">])</span>  <span class="c1"># Convert percentages to decimals for calculation</span>
+
+<span class="c1"># Define target returns</span>
+<span class="n">target_return_P1</span> <span class="o">=</span> <span class="n">mu</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+<span class="n">target_return_P2</span> <span class="o">=</span> <span class="p">(</span><span class="n">mu</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">+</span> <span class="n">mu</span><span class="p">[</span><span class="mi">2</span><span class="p">])</span> <span class="o">/</span> <span class="mi">2</span>
+
+<span class="c1"># Objective function: Portfolio Variance</span>
+<span class="k">def</span> <span class="nf">portfolio_variance</span><span class="p">(</span><span class="n">weights</span><span class="p">,</span> <span class="n">covariance_matrix</span><span class="p">):</span>
+    <span class="k">return</span> <span class="n">weights</span><span class="o">.</span><span class="n">T</span> <span class="o">@</span> <span class="n">covariance_matrix</span> <span class="o">@</span> <span class="n">weights</span>
+
+<span class="c1"># Constraint: Expected return should match target return</span>
+<span class="k">def</span> <span class="nf">target_return_constraint</span><span class="p">(</span><span class="n">weights</span><span class="p">,</span> <span class="n">target_return</span><span class="p">):</span>
+    <span class="k">return</span> <span class="n">weights</span> <span class="o">@</span> <span class="n">mu</span> <span class="o">-</span> <span class="n">target_return</span>
+
+<span class="c1"># Constraint: Weights must sum to 1</span>
+<span class="k">def</span> <span class="nf">weights_sum_constraint</span><span class="p">(</span><span class="n">weights</span><span class="p">):</span>
+    <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">weights</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span>
+
+<span class="c1"># Minimize the portfolio variance subject to the return constraint and sum of weights equals 1</span>
+<span class="k">def</span> <span class="nf">find_min_variance_portfolio</span><span class="p">(</span><span class="n">target_return</span><span class="p">):</span>
+    <span class="n">cons</span> <span class="o">=</span> <span class="p">(</span>
+        <span class="p">{</span><span class="s1">'type'</span><span class="p">:</span> <span class="s1">'eq'</span><span class="p">,</span> <span class="s1">'fun'</span><span class="p">:</span> <span class="n">weights_sum_constraint</span><span class="p">},</span>
+        <span class="p">{</span><span class="s1">'type'</span><span class="p">:</span> <span class="s1">'eq'</span><span class="p">,</span> <span class="s1">'fun'</span><span class="p">:</span> <span class="k">lambda</span> <span class="n">w</span><span class="p">:</span> <span class="n">target_return_constraint</span><span class="p">(</span><span class="n">w</span><span class="p">,</span> <span class="n">target_return</span><span class="p">)}</span>
+    <span class="p">)</span>
+    <span class="n">bounds</span> <span class="o">=</span> <span class="nb">tuple</span><span class="p">((</span><span class="mi">0</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span> <span class="k">for</span> <span class="n">_</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">mu</span><span class="p">)))</span>
+    <span class="n">initial_weights</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">([</span><span class="mi">1</span><span class="o">/</span><span class="nb">len</span><span class="p">(</span><span class="n">mu</span><span class="p">)]</span> <span class="o">*</span> <span class="nb">len</span><span class="p">(</span><span class="n">mu</span><span class="p">))</span>
+    <span class="n">result</span> <span class="o">=</span> <span class="n">minimize</span><span class="p">(</span><span class="n">portfolio_variance</span><span class="p">,</span> <span class="n">initial_weights</span><span class="p">,</span> <span class="n">args</span><span class="o">=</span><span class="p">(</span><span class="n">Sigma</span><span class="p">,),</span> <span class="n">method</span><span class="o">=</span><span class="s1">'SLSQP'</span><span class="p">,</span> <span class="n">bounds</span><span class="o">=</span><span class="n">bounds</span><span class="p">,</span> <span class="n">constraints</span><span class="o">=</span><span class="n">cons</span><span class="p">)</span>
+    <span class="k">return</span> <span class="n">result</span><span class="o">.</span><span class="n">x</span><span class="p">,</span> <span class="n">result</span><span class="o">.</span><span class="n">fun</span>
+
+<span class="c1"># Calculate optimal portfolios</span>
+<span class="n">optimal_weights_P1</span><span class="p">,</span> <span class="n">min_var_P1</span> <span class="o">=</span> <span class="n">find_min_variance_portfolio</span><span class="p">(</span><span class="n">target_return_P1</span><span class="p">)</span>
+<span class="n">optimal_weights_P2</span><span class="p">,</span> <span class="n">min_var_P2</span> <span class="o">=</span> <span class="n">find_min_variance_portfolio</span><span class="p">(</span><span class="n">target_return_P2</span><span class="p">)</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="s2">"Optimal weights for Portfolio P1 (target return = </span><span class="si">{:.4f}</span><span class="s2">):"</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">target_return_P1</span><span class="p">))</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">optimal_weights_P1</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">"Minimum Variance of Portfolio P1:"</span><span class="p">,</span> <span class="n">min_var_P1</span><span class="p">)</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="s2">"</span><span class="se">\n</span><span class="s2">Optimal weights for Portfolio P2 (target return = </span><span class="si">{:.4f}</span><span class="s2">):"</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">target_return_P2</span><span class="p">))</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">optimal_weights_P2</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">"Minimum Variance of Portfolio P2:"</span><span class="p">,</span> <span class="n">min_var_P2</span><span class="p">)</span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell-outputWrapper">
+<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
+</div>
+<div class="jp-OutputArea jp-Cell-outputArea">
+<div class="jp-OutputArea-child">
+<div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
+<pre>Optimal weights for Portfolio P1 (target return = 0.0427):
+[1.00000000e+00 0.00000000e+00 1.09198739e-12]
+Minimum Variance of Portfolio P1: 0.009999999999980346
+
+Optimal weights for Portfolio P2 (target return = 0.0150):
+[0.22965758 0.62078287 0.14955955]
+Minimum Variance of Portfolio P2: 0.006409901313492481
 </pre>
 </div>
 </div>
