--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v4.html
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v4.html
@@ -7536,7 +7536,7 @@ a.anchor-link {
 <ul>
 <li><p>(Realized) Return : $\mu_h$</p>
 </li>
-<li><p>(Historical) Volatility : $\sigma_h$</p>
+<li><p>(Historical) <a href="https://en.wikipedia.org/wiki/Volatility_(finance">Volatility</a>) : $\sigma_h$</p>
 </li>
 <li><p><a href="https://en.wikipedia.org/wiki/Skewness">Skewness</a> : $(\mathbb{E}[(\frac{x - \mu}{\sigma})^3]) = \frac{\mu_3}{\sigma_3} = \frac{\kappa_3}{\kappa_2^{3/2}}$</p>
 </li>
