--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v6.html
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v6.html
@@ -7534,7 +7534,7 @@ a.anchor-link {
 <p>A '<strong>high Beta</strong>' is simply the antithesis, or opposite, of what we just discussed. In layman's terms, we have a (higher) appetite for '<em>risk</em>' (in this case, let's keep it simple and define our premise as $\sigma$ or <strong>standard deviation</strong>) and desire to ride or 'scale up' the <em>market risk</em> (<strong>systematic risk</strong>).</p>
 <p>Moreover, it's imperative that one acknowledges that such a (described) strategy is more probable to be (quite) sensitive to the <em>estimators</em> used for the <strong>Risk Model</strong> and the <strong>Alpha Model</strong> (e.g., the length of the <em>look-back period</em> utilized); therefore, it is necessary to understand and, most importantly, <em>comprehend</em> the impact of said estimators on the <strong>Portfolio's</strong> characteristics:</p>
 <ul>
-<li><p>(Realized) Return : $\mu_h$</p>
+<li><p>(Realized) <a href="https://en.wikipedia.org/wiki/Rate_of_return">Return</a> : $\mu_h$</p>
 </li>
 <li><p>(Historical) <a href="https://en.wikipedia.org/wiki/Volatility_(finance">Volatility</a>) : $\sigma_h$</p>
 </li>
