--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v7.html
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v7.html
@@ -7548,8 +7548,8 @@ a.anchor-link {
 <h3 id="1.4-Simplification">1.4 Simplification<a class="anchor-link" href="#1.4-Simplification">¶</a></h3><p>To make it easier, we assume that once the <strong>Factor Model</strong> (FM) has been constructed, we will use <a href="https://en.wikipedia.org/wiki/Trend_following">trend following</a> estimators for the <strong>Expected Returns</strong>. Since the quality of the estimators depend on the <strong>look-back period</strong>, we define three cases:</p>
 <ul>
 <li><em><strong>Long-Term Estimator (LTE)</strong></em> : $\text{LT} \Rightarrow \text{LB} \in \{180 \; \text{Days}\}$.</li>
-<li><em><strong>Mid-Term Estimator (MTE)</strong></em> : $\text{MT} \Rightarrow \text{MT} \in \{90 \; \text{Days}\}$.</li>
-<li><em><strong>Short-Term Estimator (STE)</strong></em> : $\text{ST} \Rightarrow \text{ST} \in \{40 \; \text{Days}, 60 \; \text{Days}\}$.</li>
+<li><em><strong>Mid-Term Estimator (MTE)</strong></em> : $\text{MT} \Rightarrow \text{LB} \in \{90 \; \text{Days}\}$.</li>
+<li><em><strong>Short-Term Estimator (STE)</strong></em> : $\text{ST} \Rightarrow \text{LB} \in \{40 \; \text{Days}, 60 \; \text{Days}\}$.</li>
 </ul>
 <p>Specifically, we define a <strong>Term-Structure</strong> for the $\text{Covariance} \; \boldsymbol{\Sigma}$ and $\text{Expected Return} \; \boldsymbol{\mu}$.</p>
 </div>
