--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v10.html
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v10.html
@@ -7556,7 +7556,7 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="2.-(Investment)-Strategy">2. (Investment) Strategy<a class="anchor-link" href="#2.-(Investment)-Strategy">¶</a></h2><p>Alrighty, let's get to the fun, juicy portion; shall we?</p>
 <h3 id="2.1-(Mathematical)-Strategic-Formulation">2.1 (Mathematical) Strategic Formulation<a class="anchor-link" href="#2.1-(Mathematical)-Strategic-Formulation">¶</a></h3><p>Let's make things interesting—spicy, one may say.</p>
-<p>Consider two strats (<a href="https://en.wikipedia.org/wiki/Clipping_(morphology">clipping</a>) of 'strategies,' as embodied in <em>Morphology</em>):</p>
+<p>Consider two strats [(<a href="https://en.wikipedia.org/wiki/Clipping_(morphology">clipping</a>) of 'strategies,' as embodied in <em>Morphology</em>)]:</p>
 <p>$$
 \text{(Strategy I)} 
 \quad 
