--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v13.html
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v13.html
@@ -7614,7 +7614,7 @@ $$</p>
 \sigma(r_P(\omega) - r_{\text{SPY}}) = \sqrt{\omega^{\intercal} \Sigma \omega - 2 \omega^{\intercal} \text{Cov}(r, r_{\text{SPY}}) + \sigma_{\text{SPY}}^2} \tag{3}
 $$</p>
 <p>Oh yeah, I should probably define what '<strong><a href="https://en.wikipedia.org/wiki/Fama%E2%80%93French_three-factor_model">FF3FM</a></strong>' means; that would (probably) be helpful.</p>
-<h3 id="2.2-Fama%E2%80%93French-Three-Factor-Model">2.2 Fama–French Three-Factor Model<a class="anchor-link" href="#2.2-Fama%E2%80%93French-Three-Factor-Model">¶</a></h3><p>So, to echo the previous sentiment, we should (almost surely) explain what is this <em>funky</em> model we kept referencing:</p>
+<h3 id="2.2-Fama%E2%80%93French-Three-Factor-Model">2.2 Fama–French Three-Factor Model<a class="anchor-link" href="#2.2-Fama%E2%80%93French-Three-Factor-Model">¶</a></h3><p>So, to echo the previous sentiment, we should (<a href="https://en.wikipedia.org/wiki/Almost_surely">almost surely</a>) explain what is this <em>funky</em> model we kept referencing:</p>
 <p>$$
 r_i = r_f + \beta_i^3(r_M - r_f) + b_i^s r_{\text{SMB}} + b_i^v r_{\text{HML}} + \alpha_i + \epsilon_i \tag{4}
 $$</p>
