--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v14.html
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v14.html
@@ -7631,7 +7631,7 @@ $$</p>
 <p>But, let's try and <em>digest</em> that in a slower, easier fashion.</p>
 <p>Overall, we are exploring two <em>different investment strategies</em>, each with its own set of rules and objectives; let's dive right into them.</p>
 <h4 id="2.3.1-Strategy-I-Breakdown">2.3.1 Strategy <a href="https://en.wikipedia.org/wiki/Roman_numerals">I</a> Breakdown<a class="anchor-link" href="#2.3.1-Strategy-I-Breakdown">¶</a></h4><ol>
-<li><strong>Objective</strong>: Maximize returns while considering risk.</li>
+<li><strong>Objective</strong>: Maximize returns while considering risk (i.e., make as much <strong>$$$$$</strong> as humanly possible without it being (bi)polar)</li>
 <li><strong>Constraints</strong>:<ul>
 <li>The portfolio's beta (a measure of its <em>volatility</em> relative to the market; i.e., how <em>silly</em> and <em>spread out</em> it is relative to the 'market') must be between $-0.5$ and $0.5$.</li>
 <li>The sum of the weights assigned to each asset in the portfolio must equal $1$ (i.e., <em><strong>we gotta put our money to work!</strong></em> As such, let's buy a bunch of stuff that can make us money but, also, let's (try) not to violate the <a href="https://en.wikipedia.org/wiki/Probability_measure">Laws of Probability Theory</a>).</li>
