--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v18.html
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-html-v18.html
@@ -7683,7 +7683,7 @@ $$</p>
 <p>We will do the following:</p>
 <ul>
 <li>Divide the overall analysis period into 5 sub-periods: before subprime (<strong>Period 1</strong>), during subprime (<strong>Period 2</strong>), after the subprime (<strong>Period 3</strong>), COVID (<strong>Period 4</strong>), and post-COVID (<strong>Period 5</strong>).</li>
-<li>• Run separate <strong><a href="https://en.wikipedia.org/wiki/Backtesting">backtests</a></strong> for each sub-period when comparing strategies and assess the impact of the <em>term structure</em> (e.g., $S_{40}^{180} \; \text{versus} \; S_{40}^{90}$).</li>
+<li>Run separate <strong><a href="https://en.wikipedia.org/wiki/Backtesting">backtests</a></strong> for each sub-period when comparing strategies and assess the impact of the <em>term structure</em> (e.g., $S_{40}^{180} \; \text{versus} \; S_{40}^{90}$).</li>
 <li>Run an entire period comparison from <strong>March 1st, 2007</strong> to <strong>March 31st, 2024</strong>.</li>
 </ul>
 </div>
