--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-html-v18.html
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-html-v18.html
@@ -7495,8 +7495,7 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="$1-%5C;-%5C;-%5Ctext%7BOverview%7D$">$1 \; \; \text{Overview}$<a class="anchor-link" href="#$1-%5C;-%5C;-%5Ctext%7BOverview%7D$">¶</a></h2><h3 id="$1.1-%5C;-%5Ctext%7BGoal%7D$">$1.1 \; \text{Goal}$<a class="anchor-link" href="#$1.1-%5C;-%5Ctext%7BGoal%7D$">¶</a></h3><p>$ \text{The objective is to build and compare two factor-based long short allocation models}
-\\
-\text{with constraints on their betas}. $</p>
+\\ \text{with constraints on their betas}. $</p>
 <p>$ \text{The first strategy considers a target Beta in the interval} \; [-0.5, 0.5] \;
 \\ 
 \text{while the second has one in the interval} \; [-2, +2]. $</p>
