--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-html-v18.html
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-html-v18.html
@@ -7500,8 +7500,7 @@ a.anchor-link {
 \\ 
 \text{while the second has one in the interval} \; [-2, +2]. $</p>
 <p>$ \text{The first operates similar to a Value-at-Risk Utility (Robust Optimization);} 
-\\
-\text{the second incorporates an Information Ratio}. $</p>
+\\ \text{the second incorporates an Information Ratio}. $</p>
 <p>$ \text{Post optimization, I compare the model outcomes while evaluating their sensitivity} 
 \\
 \text{to estimator length for the covariance matrix} $</p>
