--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-html-v18.html
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-html-v18.html
@@ -7499,8 +7499,8 @@ a.anchor-link {
 <p>$ \text{The first strategy considers a target Beta in the interval} \; [-0.5, 0.5] \;
 \\ 
 \text{while the second has one in the interval} \; [-2, +2]. $</p>
-<p>$ \text{The first operates similar to a Value-at-Risk Utility (Robust Optimization);} 
-\\ \text{the second incorporates an Information Ratio}. $</p>
+<p>$ \text{The first operates similar to a Value-at-Risk Utility (Robust Optimization);}$</p>
+<p>$ \text{the second incorporates an Information Ratio}. $</p>
 <p>$ \text{Post optimization, I compare the model outcomes while evaluating their sensitivity} 
 \\
 \text{to estimator length for the covariance matrix} $</p>
